test/Fail/LocalRewriteBadVarHead.err
LocalRewriteBadVarHead.agda:10.10-51: warning: -W[no]RewriteLHSNotDefinitionOrConstructor
eq : (f : Nat → Nat) → f 0 ≡ 1  is not a legal rewrite rule, since
the left-hand side is neither a defined symbol nor a constructor
when checking the parameters of module _

LocalRewriteBadVarHead.agda:12.11-15: error: [UnequalTerms]
The terms
  foo 0
and
  1
are not equal at type Nat
when checking that the expression refl has type foo 0 ≡ 1
